# Labs

./: CMakeLists.txt  README.md  cpp1.1.cpp
cpp1/: cpp1.2.cpp  cpp1.3.cpp  cpp1.4.cpp
sfml1/: CMakeLists.txt
sfml1/convex/: main.cpp
sfml1/sfml1.1/: CMakeLists.txt  main.cpp
sfml1/sfml1.2/: CMakeLists.txt  main.cpp
sfml1/sfml1.3/: main.cpp
sfml2/: CMakeLists.txt
sfml2/sfml2.1/: main.cpp
sfml2/sfml2.2/: main.cpp
sfml3/sfml3.1/: main.cpp
sfml3/sfml3.2/: main.cpp
sfml3/sfml3.3/: main.cpp
workshop1/: CMakeLists.txt
workshop1/workshop1.1/: main.cpp
workshop1/workshop1.2/: main.cpp
workshop1/workshop1.3/: main.cpp
workshop1/workshop1.4/: CMakeLists.txt  main.cpp
workshop2/: CMakeLists.txt
workshop2/workshop2.1/: CMakeLists.txt  main.cpp
workshop2/workshop2.2/: main.cpp
workshop2/workshop2.3/: main.cpp
workshop2/workshop2.4/: main.cpp
workshop2/workshop2.5/: main.cpp
workshop2/workshop2.6/: main.cpp
workshop2/workshop2.7/: main.cpp
workshop2/workshop2.8/: main.cpp
workshop3/: CMakeLists.txt
workshop3/workshop3.1/: CMakeLists.txt  ball.cpp  ball.hpp  main.cpp  main.hpp
workshop3/workshop3.2/: CMakeLists.txt  ball.cpp  ball.hpp  main.cpp  main.hpp  numeric.cpp  numeric.hpp
workshop3/workshop3.4/: CMakeLists.txt  main.cpp  main.hpp  ship.cpp  ship.hpp
workshop3/workshop3.5/: CMakeLists.txt  main.cpp  watch.cpp  watch.hpp
